--- a/man/man1/fgpanel.1
+++ b/man/man1/fgpanel.1
@@ -1,4 +1,5 @@
 .\" Copyright (C) 2011 Thorsten Brehm
+.\" Copyright (C) 2017 Alessandro Menti
 .\"
 .\" This program is free software; you can redistribute it and/or
 .\" modify it under the terms of the GNU General Public License
@@ -13,36 +14,31 @@
 .\" You should have received a copy of the GNU General Public License
 .\" along with this program; if not, write to the Free Software
 .\" Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
-.\" Or see here: http://www.fsf.org/copyleft/gpl.html
+.\" Or try here: http://www.fsf.org/copyleft/gpl.html
 .\"
-.TH FGPANEL 1 "February 2012" "@VERSION@" "@PACKAGE@"
+.TH FGPANEL 1 2017-02-26 FlightGear "FlightGear man pages"
 .SH NAME
 fgpanel \- FlightGear Flight Simulator Panel Rendering Engine
 .SH SYNOPSIS
-.B "fgpanel "
-[\-\-\fIfg-root\fP=path] [\-\-\fIprop\fP:name=value] \-\-\fIpanel\fP=file
+\fBfgpanel\fR \fB\-\-panel=\fIfile\fR [\fB\-\-fg-root=\fIpath\fR]
+[\fB\-\-prop:\fIname\fB=\fIvalue\fR]
 .SH DESCRIPTION
-.B FlightGear Panel
+.B fgpanel
 is a free, open-source, multi-platform, and lightweight panel rendering engine
 to draw 2D panels on a low-cost computer/graphic card without 3D acceleration
 at reasonable frame rates.
-For more information visit <http://wiki.flightgear.org/FGPanel>.
 .SH OPTIONS
 .TP
-.BI "--fg-root=" "path"
-Specify the root path for data files.
+\fB\-\-panel=\fIfile\fR
+Display the panel description file \fIfile\fR.
 .TP
-.BI "--panel=" "file"
-Specify the panel description file to be displayed.
+\fB\-\-fg\-root=\fIpath\fR
+Set the FlightGear data root directory (\fB$FG_ROOT\fR) to \fIpath\fR.
 .TP
-.BI "--prop:" "name=value"
-set property <name> to <value>.
-.SH BUGS
-Send bug reports to <flightgear\-devel@lists.sourceforge.net> or visit
-<http://code.google.com/p/flightgear\-bugs>.
-.SH SEE ALSO
-fgfs(1), fgjs(1), js_demo(1), terrasync(1)
-.SH AUTHORS
-Torsten Dreyer, et al.  See
-.I Thanks
-file for a list of contributors.
+\fB\-\-prop:\fIname\fB=\fIvalue\fR
+Set the property named \fIname\fR to \fIvalue\fR.
+.SH "SEE ALSO"
+.BR fgfs (1),
+.UR http://\:wiki.flightgear.org/\:FGPanel
+the FlightGear wiki "FGPanel" page
+.UE
