--- a/man/man1/js_demo.1
+++ b/man/man1/js_demo.1
@@ -1,4 +1,4 @@
-.\" Copyright (C) 2002 Cameron Moore
+.\" Copyright (C) 2017 Alessandro Menti
 .\"
 .\" This program is free software; you can redistribute it and/or
 .\" modify it under the terms of the GNU General Public License
@@ -15,22 +15,20 @@
 .\" Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 .\" Or try here: http://www.fsf.org/copyleft/gpl.html
 .\"
-.TH FGJS 1 "January 2002" "@VERSION@" "@PACKAGE@"
+.TH JS_DEMO 1 2017-03-04 FlightGear "FlightGear man pages"
 .SH NAME
-fgjs \- FlightGear Joystick Utility
+js_demo \- Joystick demo application for FlightGear
 .SH SYNOPSIS
-.B fgjs
+\fBjs_demo\fR
 .SH DESCRIPTION
-.B fgjs
-is a joystick utility for the FlightGear Flight Simulator.  It allows
-you to generate an appropriate configuration file for your joystick.
-For more information visit <http://wiki.flightgear.org/Joystick>.
-.SH BUGS
-Send bug reports to <flightgear\-devel@lists.sourceforge.net> or visit
-<http://code.google.com/p/flightgear\-bugs>.
-.SH SEE ALSO
-fgfs(1), fgpanel(1), js_demo(1), terrasync(1)
-.SH AUTHORS
-Tony Peden, et al.  See
-.I Thanks
-file for a list of contributors.
+.B js_demo
+is a FlightGear utility that shows detected joysticks and provides a way to
+monitor them as their axes are moved or their buttons are pressed.
+.SH "EXIT STATUS"
+.B js_demo
+always exits with \fB0\fR.
+.SH "SEE ALSO"
+.BR fgfs (1),
+.UR http://\:wiki.flightgear.org/\:Input_device
+the FlightGear wiki "Input device" page
+.UE
