Man pages: fix some errors
Fix some typos/errors/style issues in the man pages.

--- a/man/man1/JSBSim.1
+++ b/man/man1/JSBSim.1
@@ -15,7 +15,7 @@
 .\" Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 .\" Or try here: http://www.fsf.org/copyleft/gpl.html
 .\"
-.TH JSBSIM 1 2017-06-04 FlightGear "FlightGear man pages"
+.TH JSBSIM 1 2017-06-25 FlightGear "FlightGear man pages"
 .SH NAME
 JSBSim \- standalone version of the JSBSim open source flight dynamics model
 .SH SYNOPSIS
@@ -71,7 +71,7 @@ Use the initialization file \fIfilename\fR.
 .TP
 \fB\-\-catalog\fR[\fB=\fIaircraft\fR]
 Print all properties for the aircraft model (\fIaircraft\fR, if the model name
-is passed as an argument, or for the model loaded via the initialization file.
+is passed as an argument, or for the model loaded via the initialization file).
 
 This option is incompatible with \fB\-\-script\fR.
 .TP
