--- a/man/man1/UGsmooth.1
+++ b/man/man1/UGsmooth.1
@@ -15,7 +15,7 @@
 .\" Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 .\" Or try here: http://www.fsf.org/copyleft/gpl.html
 .\"
-.TH UGSMOOTH 1 2017-06-04 FlightGear "FlightGear man pages"
+.TH UGSMOOTH 1 2017-06-25 FlightGear "FlightGear man pages"
 .SH NAME
 UGsmooth \- send UGear-formatted GPS data to a FlightGear instance
 .SH SYNOPSIS
@@ -34,7 +34,7 @@ and sends it to a FlightGear instance for replaying.
 Display usage information and exit.
 .TP
 \fB\-\-infile\fR \fIinfile_name\fR
-Read GPS data from \fIfilename\fR.
+Read GPS data from \fIinfile_name\fR.
 .TP
 \fB\-\-flight\fR \fIflight_dir\fR
 Read GPS data from the flight directory named \fIflight_dir\fR.
