--- a/man/man1/fgviewer.1
+++ b/man/man1/fgviewer.1
@@ -15,7 +15,7 @@
 .\" Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 .\" Or try here: http://www.fsf.org/copyleft/gpl.html
 .\"
-.TH FGVIEWER 1 2017-05-28 FlightGear "FlightGear man pages"
+.TH FGVIEWER 1 2017-06-25 FlightGear "FlightGear man pages"
 .SH NAME
 fgviewer \- An alternative FlightGear viewer application
 .SH SYNOPSIS
@@ -42,7 +42,7 @@ the time the program was compiled.
 \fB\-\-fg\-scenery\fR \fIscenerydir\fR
 Set the FlightGear scenery directory (\fB$FG_SCENERY\fR) to \fIscenerydir\fR.
 If this option is not set,
-.B fgelev
+.B fgviewer
 uses the path specified in the
 .B FG_SCENERY
 environment variable or, absent that, the
@@ -56,7 +56,7 @@ Read configuration directives from \fIconfigfile\fR.
 Set the property named \fIproperty\fR to \fIvalue\fR.
 .TP
 \fB\-\-renderer\fR \fIrend\fR
-Use the renderer names \fIrend\fR to render the scenery. This option is
+Use the renderer named \fIrend\fR to render the scenery. This option is
 currently not supported.
 .TP
 \fB\-\-hla\fR
