--- a/man/man1/metar.1
+++ b/man/man1/metar.1
@@ -15,7 +15,7 @@
 .\" Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 .\" Or try here: http://www.fsf.org/copyleft/gpl.html
 .\"
-.TH METAR 1 2017-05-27 FlightGear "FlightGear man pages"
+.TH METAR 1 2017-06-25 FlightGear "FlightGear man pages"
 .SH NAME
 metar \- demo METAR utility for FlightGear
 .SH SYNOPSIS
@@ -65,7 +65,7 @@ Print the current weather information for KSFO and KOAK:
     $ \fBmetar KSFO KOAK\fR
 
 Print the current weather information for KSFO, as well as the command line
-required to start FlightGear with the weather conditions in effect:
+arguments required to start FlightGear with the weather conditions in effect:
 
     $ \fBmetar -c KSFO -r KSFO\fR
 
